--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,13 @@
----
 # Role tasks
+
+- name: install ansible
+  import_tasks: install.yml
+  tags:
+    - role::ansible
+    - role::ansible::install
+
+# - name: configure ansible
+#   import_tasks: configure.yml
+#   tags:
+#     - role::ansible
+#     - role::ansible::configure
