Added EPEL repository role dependency.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,4 +20,6 @@ galaxy_info:
     - ansible
     - system
 
-dependencies: []
+dependencies:
+  - role: amtega.epel
+    when: ansible_facts.distribution | lower in ['centos', 'rhel']
