--- a/tests/main.yml
+++ b/tests/main.yml
@@ -26,7 +26,7 @@
   hosts: docker_sandbox_containers
   roles:
     - role: amtega.ansible
-      ansible_version: 2.5.0
+      ansible_required_version: 2.5.0
   tasks:
     - name: get ansible version
       shell: "ansible --version"
@@ -36,3 +36,11 @@
     - name: check that ansible version is correct
       assert:
         that: ansible_version_result.stdout_lines[0] == "ansible 2.5.0"
+
+- name: cleanup docker docker sandbox
+  hosts: localhost
+  roles:
+    - role: amtega.docker_sandbox
+      docker_sandbox_state: absent
+  tags:
+    - sandbox
