--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,22 @@
 ---
 # Role variables
 
+# Supported distributions
+
+ansible_supported_distributions:
+  - centos
+  - debian
+  - fedora
+  - rhel
+
+# Supported distributions versions
+
+ansible_supported_versions:
+  centos: 6
+  debian: 9
+  fedora: 27
+  rhel: 6
+
 # Ansible version for pip tool
 
 ansible_pip_version: >-
