--- a/tests/main.yml
+++ b/tests/main.yml
@@ -22,12 +22,20 @@
   tags:
     - sandbox
 
-- name: test docker_engine role
+- name: test ansible role
   hosts: docker_sandbox_containers
   roles:
     - role: amtega.ansible
       ansible_required_version: 2.6.0
       ansible_defaults_inventory: /etc/ansible/hosts
+      ansible_defaults_roles_path: /etc/ansible/roles
+      ansible_defaults_remote_tmp: /root/.ansible/tmp
+      ansible_defaults_forks: 5
+      ansible_inventory_enable_plugins:
+        - host_list
+        - script
+        - yaml
+        - ini
   tasks:
     - name: get ansible version
       shell: "ansible --version"
@@ -37,6 +45,30 @@
     - name: check that ansible version is correct
       assert:
         that: ansible_version_result.stdout_lines[0] == "ansible 2.6.0"
+
+    - name: read ansible config file
+      shell: cat {{ ansible_config_file }}
+      changed_when: false
+      register: read_config_result
+
+    - name: verify config file content
+      assert:
+        that:
+          - >-
+            read_config_result.stdout
+            is search("inventory = /etc/ansible/hosts")
+          - >-
+            read_config_result.stdout
+            is search("roles_path = /etc/ansible/roles")
+          - >-
+            read_config_result.stdout
+            is search("remote_tmp = /root/.ansible/tmp")
+          - >-
+            read_config_result.stdout
+            is search("forks = 5")
+          - >-
+            read_config_result.stdout
+            is search("enable_plugins = host_list,script,yaml,ini")
 
 - name: cleanup docker docker sandbox
   hosts: localhost
