--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,25 +2,32 @@
 galaxy_info:
   role_name: ansible
   author: Juan Antonio Valiño García
-  description: Provisione an ansible control machine
+  description: Setup an ansible control machine
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.6
+  min_ansible_version: 2.7
   platforms:
-  - name: Fedora
-    versions:
-      - 27
-      - 28
-  - name: EL
-      - 6
-      - 7
-  - name: Debian
-    versions:
-      - stretch
+    - name: Debian
+      versions:
+        - stretch
+    - name: Fedora
+      versions:
+        - 27
+        - 28
+    - name: EL
+        - 7
   galaxy_tags:
     - ansible
     - system
 
 dependencies:
-  - role: amtega.epel
-    when: ansible_facts.distribution | lower in ['centos', 'rhel']
+  - role: amtega.check_platform
+    check_platform_distributions:
+      centos: 7
+      debian: 9
+      fedora: 27
+      rhel: 7
+
+  - role: amtega.packages
+    packages_os: "{{ ansible_packages_os }}"
+    packages_python: "{{ ansible_packages_python }}"
