--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -10,11 +10,13 @@
     - name: create ansible ssh key
       user:
         name: "{{ ansible_user }}"
-        generate_ssh_key: "{{ ansible_ssh_generate_key | default(false) }}"
-        ssh_key_bits: "{{ ansible_ssh_key_bits | default(omit) }}"
-        ssh_key_file: "{{ ansible_ssh_key_file | default(omit) }}"
-        ssh_key_type: "{{ ansible_ssh_key_type | default(omit) }}"
-        ssh_key_passphrase: "{{ ansible_ssh_key_passphrase | default(omit) }}"
+        generate_ssh_key: "{{ ansible_ssh_generate_key }}"
+        ssh_key_bits: "{{ ansible_ssh_key_bits }}"
+        ssh_key_file: "{{ ansible_ssh_key_file }}"
+        ssh_key_type: "{{ ansible_ssh_key_type }}"
+        ssh_key_passphrase: >-
+          {{ (ansible_ssh_key_passphrase is not none)
+             | ternary(ansible_ssh_key_passphrase, omit) }}
   tags:
     - role::ansible
     - role::ansible::configure
