--- a/tests/main.yml
+++ b/tests/main.yml
@@ -6,8 +6,7 @@
   roles:
     - role: amtega.docker_presets
       docker_presets_images_json_query: >-
-        [? starts_with(name, `centos-6`)
-           || starts_with(name, `centos-7`)
+        [? starts_with(name, `centos-7`)
            || starts_with(name, `debian-9`)
            || starts_with(name, `fedora-27`)
            || starts_with(name, `fedora-28`) ]
@@ -94,4 +93,5 @@
     - role: amtega.docker_sandbox
       docker_sandbox_state: absent
   tags:
+    - cleanup
     - sandbox
