--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,16 +7,24 @@
         src: ansible.cfg.j2
         dest: "{{ ansible_config_file }}"
 
-    - name: create ansible ssh key
-      user:
-        name: "{{ ansible_user }}"
-        generate_ssh_key: "{{ ansible_ssh_generate_key }}"
-        ssh_key_bits: "{{ ansible_ssh_key_bits }}"
-        ssh_key_file: "{{ ansible_ssh_key_file }}"
-        ssh_key_type: "{{ ansible_ssh_key_type }}"
-        ssh_key_passphrase: >-
-          {{ (ansible_ssh_key_passphrase is not none)
-             | ternary(ansible_ssh_key_passphrase, omit) }}
+    - block:
+        - name: setup directory for ssh key
+          file:
+            path: "{{ ansible_ssh_key_file | dirname }}"
+            state: directory
+            mode: 0700
+
+        - name: create ansible ssh key
+          user:
+            name: "{{ ansible_user }}"
+            generate_ssh_key: "{{ ansible_ssh_generate_key }}"
+            ssh_key_bits: "{{ ansible_ssh_key_bits }}"
+            ssh_key_file: "{{ ansible_ssh_key_file }}"
+            ssh_key_type: "{{ ansible_ssh_key_type }}"
+            ssh_key_passphrase: >-
+              {{ (ansible_ssh_key_passphrase is not none)
+                 | ternary(ansible_ssh_key_passphrase, omit) }}
+      when: ansible_ssh_generate_key
   tags:
     - role::ansible
     - role::ansible::configure
