--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,7 +5,8 @@
 
 ansible_pip_version: >-
   {{ (ansible_required_version is not none
-      and ansible_required_version | length >0)
+      and ansible_required_version is defined
+      and ansible_required_version | length > 0)
      | ternary("==" + ansible_required_version, "") }}
 
 # OS packages
